tests/custom/STARIS_2022/basic/partitions/partition-operator-errors/set-party/stderr.expected
Error:
    set-party.essence:4:23:
  |
4 | such that a = party(2,s)
  |                       ^
Type error:
	Expected: partition from int
	Got: set of int

cat: *.solution: No such file or directory
